Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,7 +7,7 @@ trigger:
 - master
 
 pool:
-  vmImage: 'ANTONY-VASAI-L'
+  vmImage: 'Antony Self hosted'
 
 variables:
   buildConfiguration: 'Release'
