--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,7 +16,7 @@ steps:
 - task: UseDotNet@2
   inputs:
     packageType: 'sdk'
-    version: '6.x.x'  # Update to your .NET version
+    version: '2.0'
     installationPath: $(Agent.ToolsDirectory)/dotnet
 
 - script: |
